
  GRAS
  * <project>.Makefile.local (generated from gras_stub_generator) |MQ]:
    - Do clean .o files
    - Compile with -g
  * bugfix in automatic type parsing: differentiate the types "char[22]"
    and "unsigned char[22]". "short" and "long" modifiers were also ignored;
    other modifier (such as reference level) are still ignored. [MQ]
  
 -- 

SimGrid (2.94) unstable; urgency=low

  The first release candidate for SimGrid 3 !

  >>>Arnaud<<<
  (documentation)
  * Update the main page and the FAQ. Adding references to gforge.

  (gras)
  * Add a gras_os_getpid function.

  (msg)
  * Add MSG_task_get_compute_duration() and MSG_task_get_data_size()
  * Extend the logs so that they also print PID, hostname, date, ... if
    available.
  * Convert the MSG example to the use of xbt_logs instead of PRINT_MESSAGE,
    and kill the old version which were in testsuite/
  * Rewrite tools/MSG_visualization/colorize.pl for using with logs instead
    of PRINT_MESSAGE

  (xbt)
  * Add xbt_os_time(). As the rest of xbt/portability, this is not public
    for users. Instead, each programming environment (GRAS, MSG,...) use it
    when needed to provide such a feature to users.
    Don't shortcut the mecanism or you will also shortcut the virtualization
    you need on the simulator.

  >>>Martin<<<
  (infrastructure)
  * Cleanups in configury with regard to compile optimization/warning flags.
    Also add -fno-loop-optimize to any powerpc since it's the optimization
    killing gcc (< 3.4.0).
  * Doxygen cleanups: move MSG examples, kill the second Doxygen phase
    needed by MSG examples complications
  * Borrow configury beautifications from PHP

  (xbt)
  * Bugfix: XBT_LOG_NEW_DEFAULT_CATEGORY now compiles without compiler
    warning (thanks loris for stumbling into this one).
  * Bugfix: stop loading private headers (gras_config.h) from the public
    ones (xbt/swag.h).

  (gras)
  * Change SIMGRID_INSTALL_PATH to GRAS_ROOT in Makefiles generated for user.